# season-fixer

./: .env.example  .gitignore  README.md  detect_conflicts.py  detect_order.py  fetch_history.py  fix_conflicts.py  fix_season.py  pyproject.toml  report.py  reschedule_season.py  run.py  trakt_auth.py  trakt_client.py
data/: exclusions.json
season-bulk-fix/: fetch_history.py  fix_season.py  report.py  setup.sh  trakt_auth.py
season-bulk-fix/data/: flagged_seasons.csv
trakt/: __init__.py  auth.py  cli.py  client.py  csv.py  csv_to_python.py  dt.py  episodes.py  history.py  intervals.py  paths.py  schedule.py  sync.py
