[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trakt-scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0", "python-dotenv>=1.0.0"]

[project.scripts]
trakt-auth = "trakt.auth:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trakt*"]
